<resources>
    <string name="app_name">智控中心</string>
    <string name="asset_statements" translatable="false">[{\"include\":\"https://pxyb.cn/.well-known/assetlinks.json\"}]</string>
    <string name="widget_name">智控中心状态</string>
    <string name="widget_description">平台运行状态、系统异常和 IoT 设备概览</string>
    <string name="widget_open_app">打开智控中心</string>
    <string name="widget_service_label">服务</string>
    <string name="widget_incident_label">系统异常</string>
    <string name="widget_device_label">在线设备</string>
    <string name="widget_not_synced">尚未同步</string>
    <string name="widget_placeholder" translatable="false">--</string>
    <string name="shortcut_today">今日</string>
    <string name="shortcut_today_long">打开今日工作台</string>
    <string name="shortcut_devices">设备</string>
    <string name="shortcut_devices_long">打开设备控制</string>
    <string name="shortcut_notifications">通知</string>
    <string name="shortcut_notifications_long">打开通知中心</string>
    <string name="tile_device_control">设备控制</string>
    <string name="tile_device_control_subtitle">打开安全控制页</string>
    <string name="course_widget_name">周课表</string>
    <string name="course_widget_description">本学期周课表，突出显示当前周次与当前星期</string>
    <string name="course_widget_open_app">打开今日课表</string>
</resources>
